--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,11 @@
+::-webkit-scrollbar {
+  width: 0;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: #FF0000;
+}
 *{
     margin:0px;
     padding: 0px;
